# fast_api_bootstrap

./: README.md  env.example  main.py  pyproject.toml
src/core/: fast_api_setup.py
src/main/: main_setup.py
src/utils/: logger.py
